# cpp_crossplatform_py_libs

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  setup.sh
apps/: testing.py
libraries/: CMakeLists.txt
libraries/my_lib/: CMakeLists.txt  my_lib
libraries/my_lib/includes/: constants.hpp  functions.hpp
libraries/my_lib/src/: functions.cpp
libraries/my_lib_python_interface/: CMakeLists.txt  my_lib_python_interface
libraries/my_lib_python_interface/includes/: py_functions.hpp
libraries/my_lib_python_interface/src/: py_functions.cpp
python/: setup.py
